[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repomapper"
version = "0.1.0"
description = "Repository mapping tool and MCP server for codebase analysis."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "diskcache>=5.6.0",
    "fastmcp>=2.11.3",
    "grep-ast>=0.3.0",
    "networkx>=3.0",
    "pygments>=2.14.0",
    "tiktoken>=0.5.0",
    "tree-sitter>=0.20.0",
]

[project.scripts]
repomap = "repomapper.cli:main"
repomap-mcp = "repomapper.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
repomapper = ["queries/**/*.scm"]
